# workshop-open-source-geospatial

./: .codespellrc  00-instructors.md  01-prerequisites.md  02-schedule.md  index.md  joining-late.md  myst.yml  pixi.toml  plugin-custom-directives.mjs
assets/styles/: style.css
docker/: environment.yml  overrides.json  postBuild
for-instructors/: dogfooding.md  helpers.md  style-guide.md
modules/01-working-in-jupyterhub/: index.md
modules/02-interactive-viz/: index.ipynb
modules/03-integrating-ai/: index.ipynb
modules/04-data-in-the-cloud/: cloud_data_timings.json  index.ipynb  pyproject.toml
modules/05-sharing-and-publishing/: index.md
modules/06-geojupyter/: .gitignore  demo.ipynb  get_data.ipynb  index.md
reference/: 00-vocabulary.md  01-starting-your-server.md  02-stopping-your-server.md  03-gh-auth.md  04-using-myst.md
