[project]
name = "04-data-in-the-cloud"
version = "0.1.0"
description = "Dependencies for module 4 - Data in the Cloud"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "xarray>=2025.7.1",
    "pandas>=2.3.1",
    "numpy>=2.2.6,<2.3",
    "scipy>=1.16.1",
    "netCDF4>=1.7.2",
    "cftime>=1.6.4",
    "bottleneck>=1.5.0",
    "dask>=2025.7.0",
    "distributed>=2025.7.0",
    "matplotlib>=3.10.5",
    "cartopy>=0.25.0",
    "numbagg>=0.9.0",
    "pint>=0.24.4",
    "flox>=0.10.4",
    "h5netcdf>=1.6.4,<1.8",
    "h5py>=3.14.0,<3.15",
    "zarr>=3.1.1,<3.2",
    "fsspec>=2025.7.0,<2025.11",
    "icechunk>=1.1.12",
    "obstore>=0.8.2",
    "s3fs>=2025.10.0",
    "virtualizarr>=2.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
    "ipython>=9.4.0,<9.5",
]
